syntax = "proto3";

package vmr;

option java_package = "com.anhvan.vmr.proto";

import "vmr/common.proto";

service FriendService {
  rpc AddFriend(AddFriendRequest) returns (AddFriendResponse);
  rpc GetFriendList(Empty) returns (FriendListResponse);
  rpc AcceptFriend(AcceptFriendRequest) returns (AcceptFriendResponse);
  rpc RejectFriend(RejectFriendRequest) returns (RejectFriendResponse);
  rpc GetChatFriendList(Empty) returns (FriendListResponse);
  rpc QueryUser(UserListRequest) returns (UserListResponse);
  rpc GetFriendInfo(FriendInfoRequest) returns (UserResponse);
}

message FriendInfoRequest {
  int64 id = 1;
}

message UserListRequest {
  string query_string = 1;
}

message UserResponse {
  int64 id = 1;
  string username = 2;
  string name = 3;
  FriendStatus friendStatus = 4;
}

message UserListResponse {
  Error error = 1;
  repeated UserResponse user = 2;
}

message FriendInfoResponse {
  Error error = 1;
  UserResponse info = 2;
}

message AddFriendRequest {
  int64 user_id = 1;
}

message AddFriendResponse {
  Error error = 1;
}

enum FriendStatus {
  FRIEND = 0;
  WAITING = 1;
  NOT_ANSWER = 2;
  NOTHING = 3;
}

message FriendInfo {
  int64 id = 1;
  string username = 2;
  string name = 3;
  bool online = 4;
  string last_message = 5;
  string last_message_type = 6;
  int64 last_message_sender = 7;
  FriendStatus friend_status = 8;
}

message FriendListResponse {
  Error error = 1;
  repeated FriendInfo friendInfo = 2;
}

message AcceptFriendRequest {
  int64 friend_id = 1;
}

message AcceptFriendResponse {
  Error error = 1;
}

message RejectFriendRequest {
  int64 friend_id = 1;
}

message RejectFriendResponse {
  Error error = 1;
}
